--- a/index.html
+++ b/index.html
@@ -1014,9 +1014,9 @@
 		<ul class="no-bullets">
 
 			<li>
-				<a href="www.linkedin.com/in/alexandros-eleftheriadis" target="_blank">
+				<a href="https://www.linkedin.com/in/alexandros-eleftheriadis" target="_blank">
 					<span class="icon icon-linkedin"></span>
-					www.linkedin.com/in/alexandros-eleftheriadis				</a>
+					https://www.linkedin.com/in/alexandros-eleftheriadis				</a>
 			</li>
 		</ul>
 	</div>
