--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 					<li><a href="#abilities">Abilities</a></li>
 					<li><a href="#projects">Projects</a></li>
 					<li><a href="#contact">Contact</a></li>
-					<li><a href="#Terminal">Terminal</a></li>
+					<li><a href="#Terminal">CLI</a></li>
 				</ul>
 			</div>
 		</nav>
@@ -902,99 +902,6 @@
 </p>
 
 <hr />
-<!--
-
-<div class="row">
-
-	<div class="col-md-6 col-sm-12 col-xs-12">
-		<figure class="effect">
-			<img src="images/thesis.png" alt="thesis git" />
-			
-			<figcaption>
-				<h3>MSc Thesis</h3>
-				<p>Stock price predictions from historical timeseries and news articles</p>
-				<p><strong>Tags:</strong> <br />Python, TensorFlow, Keras, Neural Networks, Regression, Classification, Statistical Model </p>
-				<a href="https://github.com/VasileiosKilis/MasterThesis" target="_blank">View more</a>
-				<span class="icon">
-					<span class="glyphicon glyphicon-new-window"></span>
-				</span>
-			</figcaption> 
-		</figure>
-	</div>
-
-
-
-	<div class="col-md-6 col-sm-12 col-xs-12">
-		<figure class="effect">
-			<img src="images/webstore.png" alt="webstore git" />
-			
-			<figcaption>
-				<h3>Java Web Store</h3>
-				<p> We created a Web store using java for the software workshop module</p>
-				<p><strong>Tags:</strong> <br /> FXML graphics, Client-Server-Database Interactions, Multi-thread Server, UML design</p>
-				<a href="https://github.com/VasileiosKilis/JavaWebStore" target="_blank">View more</a>
-				<span class="icon">
-					<span class="glyphicon glyphicon-new-window"></span>
-				</span>
-			</figcaption> 
-		</figure>
-	</div>
-
-
-
-
-
-		
-	<div class="col-md-6 col-sm-12 col-xs-12">
-		<figure class="effect">
-			<img src="images/software.png" alt=" SE project" />
-			
-			<figcaption>
-				<h3>VideoShareTube Application</h3>
-				<p>We designed a software engineering project, describing a site like Youtube.</p>
-				<p><strong>Tags:</strong> <br />Functional & Non Functional Requirements, UML</p>
-				<a href="https://drive.google.com/file/d/1i2q188RfMmi4AP-Pls_SqGphSLtHwDqg/view?usp=sharing" target="_blank">View more</a>
-				<span class="icon">
-					<span class="glyphicon glyphicon-new-window"></span>
-				</span>
-			</figcaption> 
-		</figure>
-	</div>
-
-	<div class="col-md-6 col-sm-12 col-xs-12">
-		<figure class="effect">
-			<img src="images/spring.png" alt="Spring project" />
-
-			<figcaption>
-				<h3>Simple Spring Boot Project</h3>
-				<p>My first full stack project with Spring</p>
-				<p><strong>Tags:</strong> <br />Spring, HTML, CSS, Java</p>
-				<a href="https://github.com/VasileiosKilis/readingList" target="_blank">View more</a>
-				<span class="icon">
-					<span class="glyphicon glyphicon-new-window"></span>
-				</span>
-			</figcaption>
-		</figure>
-	</div>
-
-	<div class="col-md-6 col-sm-12 col-xs-12">
-		<figure class="effect">
-			<img src="images/registrationPage.png" alt="Spring project" />
-
-			<figcaption>
-				<h3>Full Stack Spring Project</h3>
-				<p>Registration Web Application</p>
-				<p><strong>Tags:</strong> <br />Spring, Java, AngularJS, RestAPI, HTML, CSS</p>
-				<a href="https://github.com/VasileiosKilis/RegistrationWebapp" target="_blank">View more</a>
-				<span class="icon">
-					<span class="glyphicon glyphicon-new-window"></span>
-				</span>
-			</figcaption>
-		</figure>
-	</div>
-
--->
-
 		
 </div>
 	
@@ -1003,9 +910,6 @@
 		<div class="background-gray">
 			<div id="contact" class="container">
 				<h2>Contact</h2>
-<p class="lead">
-	&ldquo;Small opportunities are often the beginning of great enterprises. &rdquo;<br />- Demosthenes, 4th centure BC
-</p>
 
 <hr />
 
@@ -1034,52 +938,34 @@
 	</div>
 </div>
 
-
- 
-
 </div>
 	
-	</div>
+		</div>
 		
 		<div class="background-gray">
-			<div id="Terminal" class="container">
-				<h2>bot or terminal</h2>
-<p class="lead">
-	&ldquo;blablablalba. &rdquo;<br />
-</p>
+			<div id="CLI" class="container">
+				<h2>If you are a CLI person, click here for my Resume over shell</h2>
 
 <hr />
 
 
 
+<div class="row">
+	<div class="col-md-6">
+		<ul class="no-bullets">
+
+			<li>
+				<a href="terminal.html">
+					<span class="icon2"></span>
+						
+				</a>
+			</li>
+		</ul>
+	</div>
 </div>
 
 
 
-
-
-
-
-<div id="screen">
-    <div id="Container">
-        <div id="input">
-            <p id="input_title"></p>
-            <input id="input_source" type="command" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" autofocus>
-        </div>
-        <div id="logger">
-            <div id="wrapper">
-            </div>
-        </div>
-    </div>
-</div>
-<script src="js/terminal.js"></script>
-<script src="js/example.js"></script>
-
-
-
-
-
-<hr />
 
 		<!-- Bootstrap core JavaScript -->
 		<script type="text/javascript" src="js/1.10.2/jquery.min.js"></script>
