--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 		<div class="background-white">
 			<div id="profile" class="container">
 				<h2>Profile</h2>
-<p class="lead">MSc graduate, with Distinction, looking for a role in the Computer Software Industry.</p>
+<p class="lead">MSc graduate looking for a role in the Computer Software Industry.</p>
 
 <hr />
 
