--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 					<li><a href="#abilities">Abilities</a></li>
 					<li><a href="#projects">Projects</a></li>
 					<li><a href="#contact">Contact</a></li>
-					<li><a href="#Terminal">CLI</a></li>
+					<li><a href="#Terminal">Terminal</a></li>
 				</ul>
 			</div>
 		</nav>
