--- a/index.html
+++ b/index.html
@@ -943,7 +943,7 @@
 		</div>
 		
 		<div class="background-gray">
-			<div id="CLI" class="container">
+			<div id="Terminal" class="container">
 				<h2>If you are a CLI person, click here for my Resume over shell</h2>
 
 <hr />
