--- a/index.html
+++ b/index.html
@@ -3,15 +3,7 @@
 	
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <head>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-R0MLJ0YXXN"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-R0MLJ0YXXN');
-</script>		
+		
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 		<meta http-equiv="content-script-type" content="text/javascript" />
 		<meta http-equiv="content-style-type" content="text/css" />
@@ -84,7 +76,7 @@
 					<li><a href="#abilities">Abilities</a></li>
 					<li><a href="#projects">Projects</a></li>
 					<li><a href="#contact">Contact</a></li>
-					<li><a href="#Terminal">Terminal</a></li>
+					<li><a href="#Terminal">CLI</a></li>
 				</ul>
 			</div>
 		</nav>
@@ -92,7 +84,7 @@
 		<div class="background-white">
 			<div id="profile" class="container">
 				<h2>Profile</h2>
-<p class="lead">MSc graduate looking for a role in the Computer Software Industry.</p>
+<p class="lead">MSc graduate, with Distinction, looking for a role in the Computer Software Industry.</p>
 
 <hr />
 
@@ -105,7 +97,7 @@
 			</p>
 	</div>
 	<div class="col-md-4 text-center">
-		<img src="images/175281212_1392045501175960_604411993286974874_n.jpg" alt="Pascal van Gemert" width="246" height="246" />
+		<img src="images/175281212_1392045501175960_604411993286974874_n.jpg"  width="246" height="246" />
 	</div>
 	<div class="col-md-4">
 		<h3>Details</h3>
@@ -148,9 +140,10 @@
 			<p>
 				<strong>MSc degree in Computational Physics</strong>
 				<span class="hidden-phone">
-
-<U>Description</U> blabalblablalbalbal
-
+				During my MSc studies i earned a lot of experience programming and using different platforms. </p>
+				<U>Thesis</U> The main subject of my thesis was integrating heterogeneous IoT air quality devices by setting them up from scratch, to create a platform which store and share their data; and how to visualize them.
+				Also i had a great experience to work as part of a team consisting of fellow students and researchers so we can combine our projects to a bigger one.
+				The main tools i used to accomplish my project were 1) node-RED (used for receiving and managing the data from sensors, also it is used to create a RestAPI), 2) InfluxDB (storing my data to non-relational db), 3) Grafana (visualizing my data), 4)Tableau (also a visualize tool).
 			</span>
 				<span class="experience-details">
 					<span class="location">
@@ -910,6 +903,8 @@
 </p>
 
 <hr />
+
+
 		
 </div>
 	
@@ -951,7 +946,7 @@
 		</div>
 		
 		<div class="background-gray">
-			<div id="Terminal" class="container">
+			<div id="CLI" class="container">
 				<h2>If you are a CLI person, click here for my Resume over shell</h2>
 
 <hr />
@@ -963,7 +958,7 @@
 		<ul class="no-bullets">
 
 			<li>
-				<a href="terminal.html">
+				<a href="C:\Users\aelevthe\Desktop\resume online\terminal\resumeTerminal-master/index.html">
 					<span class="icon2"></span>
 						
 				</a>
