--- a/index.html
+++ b/index.html
@@ -886,7 +886,7 @@
 		<ul class="no-bullets">
 
 			<li>
-				<a href="C:\Users\aelevthe\Desktop\resume online\terminal\resumeTerminal-master/index.html">
+				<a href="/Terminal.html">
 					<span class="icon2"></span>
 						
 				</a>
