--- a/terminal.html
+++ b/terminal.html
@@ -10,7 +10,7 @@
 
   gtag('config', 'G-R0MLJ0YXXN');
 </script>
-    <title>MAC TERMINAL STYLE RESUME</title>
+    <title>Alex Terminal emulator</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link rel="shortcut icon" href="img/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" type="text/css">
