--- a/terminal.html
+++ b/terminal.html
@@ -36,7 +36,7 @@
     </div>
     
 </div>
-<script src="terminal.js"></script>
-<script src="example.js"></script>
+<script src="/js/terminal.js"></script>
+<script src="/js/response.js"></script>
 </body>
 </html>
