changing font and remove analytics

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 			
 		<title>Eleftheriadis Alexandros </title>
-		
+		<meta name="author" content="Eleftheriadis Alexandros" />	
+		<meta name="description" content="My first steps on creating a website" />
+		<meta name="keywords" content="Eleftheriadis Alexandros, junior software engineer" />
+		<meta name="robots" content="index, nofollow" />
 		<!-- Bootstrap core CSS -->
 		<link href="http://fonts.googleapis.com/css?family=Open+Sans:300,600,700" rel="stylesheet" type="text/css" />
 		<link href="css/bootstrap.min.css" rel="stylesheet" />
@@ -246,61 +249,61 @@
 
 
 		<div class="col-md-4">
-			<p style="font-size:20px"><b>Programming:</b></p>
+			<p style="font-size:19px"><b>Programming:</b></p>
 	
 		</div>
 		<div class="col-md-8">
-				<p style="font-size:20px">C/C++, Python, Matlab, JavaScript</p>
+				<p style="font-size:19px">C/C++, Python, Matlab, JavaScript</p>
 		</div>
 	
 
 		<div class="col-md-4">
-			<p style="font-size:20px"><b>Web technologies:</b></p>
+			<p style="font-size:19px"><b>Web technologies:</b></p>
 	
 		</div>
 		<div class="col-md-8">
-				<p style="font-size:20px">OpenMP, Node-RED, JSON, RestAPI</p>
+				<p style="font-size:19px">OpenMP, Node-RED, JSON, RestAPI</p>
 		</div>
 	
 
 		<div class="col-md-4">
-			<p style="font-size:20px"><b>Databases:</b></p>
+			<p style="font-size:19px"><b>Databases:</b></p>
 	
 		</div>
 		<div class="col-md-8">
-				<p style="font-size:20px">MySQL, InfluxDB, MongoDB</p>
+				<p style="font-size:19px">MySQL, InfluxDB, MongoDB</p>
 		</div>
 
 		<div class="col-md-4">
-			<p style="font-size:20px"><b>Software Platforms:</b></p>
+			<p style="font-size:19px"><b>Software Platforms:</b></p>
 	
 		</div>
 		<div class="col-md-8">
-				<p style="font-size:20px">MS Office, Tableau, Grafana</p>
+				<p style="font-size:19px">MS Office, Tableau, Grafana</p>
 		</div>
 
 		<div class="col-md-4">
-			<p style="font-size:20px"><b>Hardware:</b></p>
+			<p style="font-size:19px"><b>Hardware:</b></p>
 	
 		</div>
 		<div class="col-md-8">
-				<p style="font-size:20px">Arduino, Raspberry Pi</p>
+				<p style="font-size:19px">Arduino, Raspberry Pi</p>
 		</div>
 
 		<div class="col-md-4">
-			<p style="font-size:20px"><b>Operating Systems:</b></p>
+			<p style="font-size:19px"><b>Operating Systems:</b></p>
 	
 		</div>
 		<div class="col-md-8">
-				<p style="font-size:20px">Linux, MS Windows</p>
+				<p style="font-size:19px">Linux, MS Windows</p>
 		</div>
 
 		<div class="col-md-4">
-			<p style="font-size:20px"><b>General Skills:</b></p>
+			<p style="font-size:19px"><b>General Skills:</b></p>
 	
 		</div>
 		<div class="col-md-8">
-				<p style="font-size:20px">Excperience in use of modern source control (Git) and in OOP (Object-Oriented Programming)</p>
+				<p style="font-size:19px">Excperience in use of modern source control (Git) and in OOP (Object-Oriented Programming)</p>
 		</div>
 
 
