--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
 			<p>
 				<strong>MSc degree in Computational Physics</strong>
 				<span class="hidden-phone">
-				During my MSc studies i earned a lot of experience programming and using different platforms. </p>
-				<U>Thesis</U> The main subject of my thesis was integrating heterogeneous IoT air quality devices by setting them up from scratch, to create a platform which store and share their data; and how to visualize them.
-				Also i had a great experience to work as part of a team consisting of fellow students and researchers.
+				During my MSc studies I earned a lot of experience programming and using different platforms. </p>
+				<U>Thesis</U> The main subject of my thesis was integrating heterogeneous IoT air quality devices by setting them up from scratch, to create a platform which stores and shares their data; and how to visualize them.
+				During this thesis I gained invaluable experience working along with fellow academia researchers.
 				The main tools i used to accomplish my project were 1) node-RED (used for receiving and managing the data from sensors, also it is used to create a RestAPI), 2) InfluxDB (storing my data to non-relational db), 3) Grafana (visualizing my data), 4)Tableau (also a visualize tool).
 			</span>
 				<span class="experience-details">
@@ -249,61 +249,61 @@
 
 
 		<div class="col-md-4">
-			<p style="font-size:19px"><b>Programming:</b></p>
+			<p style="font-size:18px"><b>Programming:</b></p>
 	
 		</div>
 		<div class="col-md-8">
-				<p style="font-size:19px">C/C++, Python, Matlab, JavaScript</p>
+				<p style="font-size:18px">C/C++, Python, Matlab, JavaScript</p>
 		</div>
 	
 
 		<div class="col-md-4">
-			<p style="font-size:19px"><b>Web technologies:</b></p>
+			<p style="font-size:18px"><b>Web technologies:</b></p>
 	
 		</div>
 		<div class="col-md-8">
-				<p style="font-size:19px">OpenMP, Node-RED, JSON, RestAPI</p>
+				<p style="font-size:18px">OpenMP, Node-RED, JSON, RestAPI</p>
 		</div>
 	
 
 		<div class="col-md-4">
-			<p style="font-size:19px"><b>Databases:</b></p>
+			<p style="font-size:18px"><b>Databases:</b></p>
 	
 		</div>
 		<div class="col-md-8">
-				<p style="font-size:19px">MySQL, InfluxDB, MongoDB</p>
+				<p style="font-size:18px">MySQL, InfluxDB, MongoDB</p>
 		</div>
 
 		<div class="col-md-4">
-			<p style="font-size:19px"><b>Software Platforms:</b></p>
+			<p style="font-size:18px"><b>Software Platforms:</b></p>
 	
 		</div>
 		<div class="col-md-8">
-				<p style="font-size:19px">MS Office, Tableau, Grafana</p>
+				<p style="font-size:18px">MS Office, Tableau, Grafana</p>
 		</div>
 
 		<div class="col-md-4">
-			<p style="font-size:19px"><b>Hardware:</b></p>
+			<p style="font-size:18px"><b>Hardware:</b></p>
 	
 		</div>
 		<div class="col-md-8">
-				<p style="font-size:19px">Arduino, Raspberry Pi</p>
+				<p style="font-size:18px">Arduino, Raspberry Pi</p>
 		</div>
 
 		<div class="col-md-4">
-			<p style="font-size:19px"><b>Operating Systems:</b></p>
+			<p style="font-size:18px"><b>Operating Systems:</b></p>
 	
 		</div>
 		<div class="col-md-8">
-				<p style="font-size:19px">Linux, MS Windows</p>
+				<p style="font-size:18px">Linux, MS Windows</p>
 		</div>
 
 		<div class="col-md-4">
-			<p style="font-size:19px"><b>General Skills:</b></p>
+			<p style="font-size:18px"><b>General Skills:</b></p>
 	
 		</div>
 		<div class="col-md-8">
-				<p style="font-size:19px">Excperience in use of modern source control (Git) and in OOP (Object-Oriented Programming)</p>
+				<p style="font-size:18px">Excperience in use of modern source control (Git) and in OOP (Object-Oriented Programming)</p>
 		</div>
 
 
