--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
 				<strong>MSc degree in Computational Physics</strong>
 				<span class="hidden-phone">
 				During my MSc studies I earned a lot of experience programming and using different platforms. </p>
-				<U>Thesis</U> The main subject of my thesis was integrating heterogeneous IoT air quality devices by setting them up from scratch, to create a platform which stores and shares their data; and how to visualize them.
-				During this thesis I gained invaluable experience working along with fellow academia researchers.
-				The main tools i used to accomplish my project were 1) node-RED (used for receiving and managing the data from sensors, also it is used to create a RestAPI), 2) InfluxDB (storing my data to non-relational db), 3) Grafana (visualizing my data), 4)Tableau (also a visualize tool).
+				<U>Thesis</U> The main subject of my thesis was to integrate heterogeneous IoT air quality devices by setting them up from scratch and deplying them, to create a platform which stores and shares the devices' data, and to develop methods of visualizing these data.
+				During this thesis, I collaborated with a number of academic researchers which has proven valuable  as it allowed me to improve soft skill, including team work, management and planning.
+				The main tools i used to accomplish my project were 1) node-RED (used for receiving and managing the data from sensors, also it is used to create a RestAPI), 2) InfluxDB (storing sensors data to non-relational db), 3) Grafana (visualizing my data), 4) Tableau (also a visualize tool).
 			</span>
 				<span class="experience-details">
 					<span class="location">
